--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="MyIELTS">
+  <link rel="apple-touch-icon" href="/my-ielts/favicon.png">
   <link rel="icon" href="/favicon.png" type="image/svg+xml">
   <title>My IELTS</title>
   <meta name="description" content="Everything in my IELTS preparetion">
