--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="apple-touch-icon" href="/my-ielts/favicon.png">
   <link rel="icon" href="/favicon.png" type="image/svg+xml">
   <title>My IELTS</title>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <meta name="description" content="Everything in my IELTS preparetion">
   <style>
   /* iOS 安全区域（防止被状态栏 / 灵动岛挡住） */
