--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-  <meta name="apple-mobile-web-app-title" content="MyIELTS
-  <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-  <meta name="theme-color" content="#1e293b" media="(prefers-color-scheme: dark)">
+  <meta name="apple-mobile-web-app-title" content="MyIELTS">
   <link rel="apple-touch-icon" href="/my-ielts/favicon.png">
   <link rel="icon" href="/favicon.png" type="image/svg+xml">
   <title>My IELTS</title>
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <meta name="description" content="Everything in my IELTS preparetion">
   <style>
   /* iOS 安全区域（防止被状态栏 / 灵动岛挡住） */
   #app {
-    /*padding-top: env(safe-area-inset-top);*/
+    padding-top: env(safe-area-inset-top);
     padding-right: env(safe-area-inset-right);
     padding-bottom: env(safe-area-inset-bottom);
     padding-left: env(safe-area-inset-left);
@@ -24,7 +21,6 @@
     min-height: 100vh;
   }
 </style>
-
 
 </head>
 <body>
